; ModuleID = '/home/carl/AnghaBench/systemd/src/analyze/extr_analyze-security.c_assess_notify_access.c'
source_filename = "/home/carl/AnghaBench/systemd/src/analyze/extr_analyze-security.c_assess_notify_access.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.security_assessor = type { i32 }
%struct.security_info = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"all\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.security_assessor*, %struct.security_info*, i8*, i8**, i8**)* @assess_notify_access to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @assess_notify_access(%struct.security_assessor* %0, %struct.security_info* %1, i8* %2, i8** %3, i8** %4) #0 {
  %6 = alloca %struct.security_assessor*, align 8
  %7 = alloca %struct.security_info*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8**, align 8
  %10 = alloca i8**, align 8
  store %struct.security_assessor* %0, %struct.security_assessor** %6, align 8
  store %struct.security_info* %1, %struct.security_info** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8** %3, i8*** %9, align 8
  store i8** %4, i8*** %10, align 8
  %11 = load i8**, i8*** %9, align 8
  %12 = call i32 @assert(i8** %11)
  %13 = load i8**, i8*** %10, align 8
  %14 = call i32 @assert(i8** %13)
  %15 = load %struct.security_info*, %struct.security_info** %7, align 8
  %16 = getelementptr inbounds %struct.security_info, %struct.security_info* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i8* @streq_ptr(i32 %17, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %19 = load i8**, i8*** %9, align 8
  store i8* %18, i8** %19, align 8
  %20 = load i8**, i8*** %10, align 8
  store i8* null, i8** %20, align 8
  ret i32 0
}

declare dso_local i32 @assert(i8**) #1

declare dso_local i8* @streq_ptr(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
